fix errors and warnings

--- a/main.tex
+++ b/main.tex
@@ -53,6 +53,7 @@
 \usepackage{bibentry}
 \usepackage{mathdots}
 \usepackage{graphbox}
+\usepackage{xspace}
 
 %%% KABLE HEADER:
 \usepackage{booktabs}
@@ -644,7 +645,7 @@
         \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 \\
         \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 \\
         \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 \color{black}\\
-        \phantom{x}
+        \phantom{x}\\
       \end{block}
     \end{blockarray}
     \]
@@ -672,7 +673,7 @@
         \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 \\
         \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 \\
         \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 \color{black}\\
-        \phantom{x}
+        \phantom{x}\\
       \end{block}
     \end{blockarray}
     \]
@@ -700,7 +701,7 @@
         \color{lightgray}0 & \color{lightgray}0 & \color[HTML]{008B45}\bm{1} & \color{lightgray}0 & \color{lightgray}0 \\
         \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 \\
         \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 \color{black}\\
-        \phantom{x}
+        \phantom{x}\\
       \end{block}
     \end{blockarray}
     \]
@@ -728,7 +729,7 @@
         \color{lightgray}0 & \color{lightgray}0 & \color{black}\bm{1} & \color{lightgray}0 & \color{lightgray}0 \\
         \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color[HTML]{008280}\bm{1} & \color{lightgray}0 \\
         \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 & \color{white}0 \color{black}\\
-        \phantom{x}
+        \phantom{x}\\
       \end{block}
     \end{blockarray}
     \]
@@ -753,10 +754,10 @@
         \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color{black}\bm{1} \\
         \color{black}\bm{1} & \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 \\
         \color{lightgray}\vdots & \color{lightgray}\vdots & \color{lightgray}\vdots & \color{lightgray}\vdots & \color{lightgray}\vdots \\
-        \color{lightgray}0 & \color{lightgray}0 & \color{008B45}\bm{1} & \color{lightgray}0 & \color{lightgray}0 \\
+        \color{lightgray}0 & \color{lightgray}0 & \color{black}\bm{1} & \color{lightgray}0 & \color{lightgray}0 \\
         \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color{black}\bm{1} & \color{lightgray}0 \\
         \color{lightgray}0 & \color{lightgray}0 & \color[HTML]{008B45}\bm{1} & \color{lightgray}0 & \color{lightgray}0 \\
-        \phantom{x}
+        \phantom{x}\\
       \end{block}
     \end{blockarray}
     \]
@@ -805,7 +806,7 @@
       \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(73)})} & \color{white}0 & \color{white}0 \\
       \color{white}0 & \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(74)})} & \color{white}0 \\
       \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(75)})} & \color{white}0 & \color{white}0 \\
-      \phantom{x}
+      \phantom{x}\\
     \end{block}
   \end{blockarray}
   $$
@@ -835,7 +836,7 @@
       \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(73)})} & \color{white}0 & \color{white}0 \\
       \color{white}0 & \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(74)})} & \color{white}0 \\
       \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(75)})} & \color{white}0 & \color{white}0 \\
-      \phantom{x}
+      \phantom{x}\\
     \end{block}
   \end{blockarray}
   $$
@@ -866,7 +867,7 @@
       \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(73)})} & \color{white}0 & \color{white}0 \\
       \color{white}0 & \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(74)})} & \color{white}0 \\
       \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(75)})} & \color{white}0 & \color{white}0 \\
-      \phantom{x}
+      \phantom{x}\\
     \end{block}
   \end{blockarray}
   $$
@@ -897,7 +898,7 @@
       \color{lightgray}0 & \color{lightgray}0 & \color[HTML]{008B45}\bm{g_l(x^{(73)})} & \color{lightgray}0 & \color{lightgray}0 \\
       \color{white}0 & \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(74)})} & \color{white}0 \\
       \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(75)})} & \color{white}0 & \color{white}0 \\
-      \phantom{x}
+      \phantom{x}\\
     \end{block}
   \end{blockarray}
   $$
@@ -928,7 +929,7 @@
       \color{lightgray}0 & \color{lightgray}0 & \color{black}\bm{g_l(x^{(73)})} & \color{lightgray}0 & \color{lightgray}0 \\
       \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color[HTML]{008280}\bm{g_l(x^{(74)})} & \color{lightgray}0 \\
       \color{white}0 & \color{white}0 & \color{white}\bm{g_l(x^{(75)})} & \color{white}0 & \color{white}0 \\
-      \phantom{x}
+      \phantom{x}\\
     \end{block}
   \end{blockarray}
   $$
@@ -956,10 +957,10 @@
       \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color{black}\bm{g_l(x^{(2)})} \\
       \color{black}\bm{g_l(x^{(3)})} & \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 \\
       \color{lightgray}\vdots & \color{lightgray}\vdots & \color{lightgray}\vdots & \color{lightgray}\vdots & \color{lightgray}\vdots \\
-      \color{lightgray}0 & \color{lightgray}0 & \color{008B45}\bm{g_l(x^{(73)})} & \color{lightgray}0 & \color{lightgray}0 \\
+      \color{lightgray}0 & \color{lightgray}0 & \color{black}\bm{g_l(x^{(73)})} & \color{lightgray}0 & \color{lightgray}0 \\
       \color{lightgray}0 & \color{lightgray}0 & \color{lightgray}0 & \color{black}\bm{g_l(x^{(74)})} & \color{lightgray}0 \\
       \color{lightgray}0 & \color{lightgray}0 & \color[HTML]{008B45}\bm{g_l(x^{(75)})} & \color{lightgray}0 & \color{lightgray}0 \\
-      \phantom{x}
+      \phantom{x}\\
     \end{block}
   \end{blockarray}
   $$
@@ -1354,19 +1355,19 @@
   \toprule
     \textbf{Life.expectancy} & {\color{lightgray}\textbf{Country}} & \textbf{Year} & \textbf{BMI} & \textbf{Adult.Mortality} & \textbf{Data set}\\
   \midrule
-    51.2 & {\color{lightgray}ETH} & 2000 & 12.3 & 391 & \multirow{3}{*}{\color[HTML]{3B4992}\normalsize$\mathcal{D}_1}\\
+    51.2 & {\color{lightgray}ETH} & 2000 & 12.3 & 391 & \multirow{3}{*}{\color[HTML]{3B4992}\normalsize$\mathcal{D}_1$}\\
     {\tiny$\vdots$} & {\tiny\color{lightgray}$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$}\\
     64.8 & {\color{lightgray}ETH} & 2015 & 17.6 & 225\\ \hline
-    78.0 & {\color{lightgray}GER} & 2000 & 55.1 & 95 & \multirow{3}{*}{\color[HTML]{EE0000}\normalsize$\mathcal{D}_2}\\
+    78.0 & {\color{lightgray}GER} & 2000 & 55.1 & 95 & \multirow{3}{*}{\color[HTML]{EE0000}\normalsize$\mathcal{D}_2$}\\
     {\tiny$\vdots$} & {\tiny\color{lightgray}$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$}\\
     81.0 & {\color{lightgray}GER} & 2015 & 62.3 & 68\\ \hline
-    79.6 & {\color{lightgray}SWE} & 2000 & 52.8 & 73 & \multirow{3}{*}{\color[HTML]{008B45}\normalsize$\mathcal{D}_3}\\
+    79.6 & {\color{lightgray}SWE} & 2000 & 52.8 & 73 & \multirow{3}{*}{\color[HTML]{008B45}\normalsize$\mathcal{D}_3$}\\
     {\tiny$\vdots$} & {\tiny\color{lightgray}$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$}\\
     82.4 & {\color{lightgray}SWE} & 2015 & 59.5 & 53\\ \hline
-    76.8 & {\color{lightgray}USA} & 2000 & 6.1  & 114 & \multirow{3}{*}{\color[HTML]{631879}\normalsize$\mathcal{D}_4}\\
+    76.8 & {\color{lightgray}USA} & 2000 & 6.1  & 114 & \multirow{3}{*}{\color[HTML]{631879}\normalsize$\mathcal{D}_4$}\\
     {\tiny$\vdots$} & {\tiny\color{lightgray}$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$}\\
     79.3 & {\color{lightgray}USA} & 2015 & 69.6 & 13\\ \hline
-    57.3 & {\color{lightgray}ZAF} & 2000 & 4.1 & 397 & \multirow{3}{*}{\color[HTML]{008280}\normalsize$\mathcal{D}_5}\\
+    57.3 & {\color{lightgray}ZAF} & 2000 & 4.1 & 397 & \multirow{3}{*}{\color[HTML]{008280}\normalsize$\mathcal{D}_5$}\\
     {\tiny$\vdots$} & {\tiny\color{lightgray}$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$} & {\tiny$\vdots$}\\
     62.9 & {\color{lightgray}ZAF} & 2015 & 51.1 & 328\\
   \bottomrule
@@ -1489,7 +1490,7 @@
 
 \begin{frame}{Estimation of main effects}
   \begin{itemize}
-    \item Each site holds a design matrix for the $k\th$ base learner: $\design_{k,\iSite}$ and a slice of the pseudo residuals: $\rmm_\iSite$
+    \item Each site holds a design matrix for the $k$\th base learner: $\design_{k,\iSite}$ and a slice of the pseudo residuals: $\rmm_\iSite$
   \end{itemize}
   \tikz[remember picture, overlay] \node[anchor=center] at ($(current page.center)-(0,1.1)$) {\includegraphics[width=0.7\textwidth]{figures/distr-lm-iter1.png}};
   %\begin{figure}
@@ -1542,7 +1543,7 @@
     \vspace{0.15cm}
     \hspace*{\algorithmicindent} \textbf{Input} Sites design matrices $\design_{k,1}, \dots, \design_{k,\nSites}$, response vectors $\rmm_1, \dots, \rmm_\nSites$ and\\
     \hspace*{\algorithmicindent} \phantom{\textbf{Input} }an optional penalty matrix $\penMat_k$.\\
-    \hspace*{\algorithmicindent} \textbf{Output} Estimated parameter vector $\thetabh_k$.\vspace{0.15cm}
+    \hspace*{\algorithmicindent} \textbf{Output} Estimated parameter vector $\tbh_k$.\vspace{0.15cm}
     \hrule
     \begin{algorithmic}[1]
       \Procedure{$\operatorname{distFit}$}{$\design_{k,1}, \dots, \design_{k,\nSites}, \rmm_1, \dots, \rmm_\nSites, \penMat_k$}
@@ -1702,13 +1703,13 @@
           \For{$\blk \in \{1, \dots, \blK\}$}\tikzmk{B}\boxtrans
               \State \tikzmk{A}$\tbmh_\blk = \operatorname{distFit(\design_{k,1}, \dots, \design_{k,\nSites}, \rmm_1, \rmm_\nSites, \penMat_k)}$
               \State$\tbmh_{\lsite} = \operatorname{getSiteEffects}(\tbmh_{{\lsite}, 1}, \dots, \tbmh_{{\lsite},\nSites})$\tikzmk{B}\boxittwo{olivedrab}
-              \State \tikzmk{A}$\sse_\blk = \sum_{i=1}^n(\rmi - b_\blk(\xi | \tbmh_\blk))^2$$\tikzmk{B}\boxtrans
+              \State \tikzmk{A}$\sse_\blk = \sum_{i=1}^n(\rmi - b_\blk(\xi | \tbmh_\blk))^2$\tikzmk{B}\boxtrans
               \State \tikzmk{A}$\sse_{\lsite} = \sum_{i=1}^n(\rmi - b_{\lsite}(\xi | \tbmh_{\lsite}))^2$
           \EndFor
           \State $\blk^{[m]} = \argmin_{\blk\in\{1, \dots, \blK, 1_{\times}, \dots, \blK_{\times}\}} \sse_\blk$\hspace{0.4cm}\tikzmk{B}\boxittwo{olivedrab}
           \State \tikzmk{A}$\fmh(\xv) = \fmdh(\xv) + \nu b_{\blk^{[m]}} (\xv | \tbmh_{\blk^{[m]}})$\tikzmk{B}\boxtrans
       \EndWhile
-      \State \textbf{return} $\fh = \fh^{[M]}$
+      \State \textbf{return} $\fh = \fmh$
   \EndProcedure
   \end{algorithmic}
   \end{algorithm}
@@ -2011,7 +2012,7 @@ plotBaselearnerTraces(cb) | plotPEUni(cb, "charExclamation") |
   \end{figure}
   \begin{itemize}
     \item[$\Rightarrow$] The pure implementation (CWB, green) is up to 5 times and with binning up to 10 times faster than \texttt{mboost}. ACWB and HCWB elevates the speedup even more.
-  \end{item}
+  \end{itemize}
 \end{frame}
 
 
@@ -2066,12 +2067,12 @@ plotBaselearnerTraces(cb) | plotPEUni(cb, "charExclamation") |
     \centering
     \includegraphics[width=0.45\textwidth]{figures/topics-outlook.png}
   \end{figure}
-  \item[$\Rightarrow$] Framework that combines all the presented aspects:
+  $\Rightarrow$ Framework that combines all the presented aspects:
     \begin{itemize}
       \item Distributed \texttt{Autocompboost} that fits a privacy-preserving CWB variant to horizontally and vertically distributed data sets.\vspace{0.1cm}
-      \item Provide practitioneers with insights about the required complexity, feature importance, main effects and site-specific corrections, as well as a transparent decision making.
+      \item Provide practitioners with insights about the required complexity, feature importance, main effects and site-specific corrections, as well as transparent decision-making.
     \end{itemize}
-	\addtocounter{framenumber}{-1}
+    \addtocounter{framenumber}{-1}
 \end{frame}
 
 %%%%% BACKUP SLIDES ------------------------------------------------------------------------------%%
