--- a/tex/tex-bmat10.tex
+++ b/tex/tex-bmat10.tex
@@ -1,4 +1,3 @@
-
 \[
 \design_k = \tiny\begin{blockarray}{cccccccccc}
 \color[HTML]{440154}B_{1} & \color[HTML]{482878}B_{2} & \color[HTML]{3E4A89}B_{3} & \color[HTML]{31688E}B_{4} & \color[HTML]{26828E}B_{5} & \color[HTML]{1F9E89}B_{6} & \color[HTML]{35B779}B_{7} & \color[HTML]{6DCD59}B_{8} & \color[HTML]{B4DE2C}B_{9} & \color[HTML]{FDE725}B_{10} \\
@@ -11,10 +10,8 @@
   \color{lightgray}0.00 & \color{gray}0.02 & \color{gray}0.48 & \color{gray}0.48 & \color{gray}0.02 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00\color{black}\\
   \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{gray}0.01 & \color{gray}0.40 & \color{gray}0.55 & \color{gray}0.04 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00\color{black}\\
   \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color[HTML]{1F9E89}0.29 & \color[HTML]{35B779}0.63 & \color[HTML]{6DCD59}0.08 & \color{lightgray}0.00 & \color{lightgray}0.00\color{black}\\
-  
-\phantom{x}
+\phantom{x}\\
 \end{block}
-
 \end{blockarray}
 \]
 \normalsize
