--- a/references.bib
+++ b/references.bib
@@ -984,7 +984,7 @@
     publisher = {Cambridge University Press}
 }
 
-@article{samarati1998protecting,
+@misc{samarati1998protecting,
     title     = {Protecting privacy when disclosing information: k-anonymity and its enforcement through generalization and suppression},
     author    = {Samarati, Pierangela and Sweeney, Latanya},
     year      = {1998},
