--- a/tex/tex-bmat70.tex
+++ b/tex/tex-bmat70.tex
@@ -8,10 +8,10 @@
   \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{gray}0.17 & \color{gray}0.67 & \color{gray}0.17\color{black}\\
   \color{black}\vdots & \color{black}\vdots & \color{black}\vdots & \color{black}\vdots & \color{black}\vdots & \color{black}\vdots & \color{black}\vdots & \color{black}\vdots & \color{black}\vdots & \color{black}\vdots\\
   \color{lightgray}0.00 & \color[HTML]{482878}0.02 & \color[HTML]{3E4A89}0.48 & \color[HTML]{31688E}0.48 & \color[HTML]{26828E}0.02 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00\color{black}\\
-\end{block}
 \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.01 & \color{white}0.40 & \color{white}0.55 & \color{white}0.04 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00\color{black}\\
   \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.29 & \color{white}0.63 & \color{white}0.08 & \color{white}0.00 & \color{white}0.00\color{black}\\
-\phantom{x}
+\phantom{x}\\
+\end{block}
 \end{blockarray}
 \]
 \normalsize
