--- a/tex/tex-bmat40.tex
+++ b/tex/tex-bmat40.tex
@@ -7,11 +7,11 @@
   \color{lightgray}0.00 & \color{gray}0.20 & \color{gray}0.66 & \color{gray}0.14 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00\color{black}\\
   \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color[HTML]{6DCD59}0.17 & \color[HTML]{B4DE2C}0.67 & \color[HTML]{FDE725}0.17\color{black}\\
   \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots\\
-\end{block}
 \color{white}0.00 & \color{white}0.02 & \color{white}0.48 & \color{white}0.48 & \color{white}0.02 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00\color{black}\\
   \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.01 & \color{white}0.40 & \color{white}0.55 & \color{white}0.04 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00\color{black}\\
   \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.29 & \color{white}0.63 & \color{white}0.08 & \color{white}0.00 & \color{white}0.00\color{black}\\
-\phantom{x}
+\phantom{x}\\
+\end{block}
 \end{blockarray}
 \]
 \normalsize
