--- a/tex/tex-bmat59.tex
+++ b/tex/tex-bmat59.tex
@@ -5,13 +5,13 @@
 \phantom{x}\\
 \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{gray}0.07 & \color{gray}0.62 & \color{gray}0.31 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00\color{black}\\
   \color{lightgray}0.00 & \color[HTML]{482878}0.20 & \color[HTML]{3E4A89}0.66 & \color[HTML]{31688E}0.14 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00 & \color{lightgray}0.00\color{black}\\
-\end{block}
 \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.17 & \color{white}0.67 & \color{white}0.17\color{black}\\
   \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots & \color{white}\vdots\\
   \color{white}0.00 & \color{white}0.02 & \color{white}0.48 & \color{white}0.48 & \color{white}0.02 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00\color{black}\\
   \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.01 & \color{white}0.40 & \color{white}0.55 & \color{white}0.04 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00\color{black}\\
   \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.00 & \color{white}0.29 & \color{white}0.63 & \color{white}0.08 & \color{white}0.00 & \color{white}0.00\color{black}\\
-\phantom{x}
+\phantom{x}\\
+\end{block}
 \end{blockarray}
 \]
 \normalsize
